fixed sorting bug & changed header-image size on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -9,7 +9,6 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100%;
-    // font-size: 2rem !important; /* basically equals 20px now by default */
     font-family: "Open Sans", Calibri, 'Trebuchet MS', sans-serif !important;
 }
 
@@ -23,7 +22,8 @@ h1, h2, h3, h4, h5, h6 {
 // Crop and Define Heder Images
 .own-home-bgimage {
     background: linear-gradient(rgba(255, 255, 255, 0), $bg-color), url('../img/header1.jpg') !important;
-    height: 20vh !important;
+    height: 10vh !important;
+    background-size: 100% 10vh !important;
     background-position: center center !important;
     background-repeat: no-repeat !important; 
 }
@@ -38,16 +38,10 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: -1px -4px 5px $reverse-bg-color !important;
 }
 
-// set fixed pixel width x height for image
-// img {
-//     width: 30vw !important;
-//     height: 20vh !important;
-// }
-
 
 // modify some animations from animate.style for css
 .animate__animated.animate__rubberBand {
-    --animate-duration: 2000ms;
+    --animate-duration: 1800ms;
 }
 
 .own-svg-size {
@@ -61,6 +55,10 @@ h1, h2, h3, h4, h5, h6 {
         width: 1.6rem !important;
         height: 1.6rem !important;  
     }
-    
+
+    .own-home-bgimage {
+        height: 20vh !important;
+        background-size: 100% 20vh !important;
+    }
 
 }
